--- a/pom.xml
+++ b/pom.xml
@@ -57,4 +57,10 @@
 		</plugins>
 	</build>
 
+	<distributionManagement>
+   	 <repository>
+    	<id>nexus</id>
+        <url>http://localhost:8081/repository/spring-releases/</url>
+   	 </repository>
+	</distributionManagement>
 </project>
