--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
 
       # CORRECTION ICI : ./mvnw
       - name: SonarQube Analysis
-        run: ./mvnw sonar:sonar -Dsonar.projectKey=springboot-app -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }} -Dsonar.token=${{ secrets.SONAR_TOKEN }}
+        run: ./mvnw sonar:sonar "-Dsonar.projectKey=springboot-app" "-Dsonar.host.url=${{ secrets.SONAR_HOST_URL }}" "-Dsonar.token=${{ secrets.SONAR_TOKEN }}"
         
       - name: Maven Settings for Nexus
         uses: s4u/maven-settings-action@v2.8.0
